<resources>
    <string name="app_name">SVNIT Sports Managment</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="volleyball">Volleyball</string>
    <string name="basketball">Basketball</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chemical">Chemical</string>
    <string name="electrical">Electrical</string>
    <string name="mechanical">Mechanical</string>
    <string name="electronics">Electronics</string>
    <string name="computer_science">Computer Science</string>
</resources>